master/__CUSTOM-CONFIGS/redirector-01-main/iptables/rules.v4
# Generated by iptables-save v1.4.14 on Mon Dec 16 13:59:59 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:fail2ban-ssh - [0:0]

-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# allow incoming HTTP/HTTPS traffic only on nginx-VRRP addr
-A INPUT -p tcp -m conntrack --ctstate NEW -d 188.164.255.102 -m multiport --dports 80,443 -j ACCEPT

# SYSTEM
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT

# SSH
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -p tcp -m conntrack --ctstate NEW -m multiport --dports 22 -j ACCEPT

# OFFICE NET
-A INPUT -s 91.193.167.16/29 -m conntrack --ctstate NEW -j ACCEPT

# SALT/ZABBIX
-A INPUT -s zabbix.lvlp.co -p tcp -m conntrack --ctstate NEW -m multiport --dports 10050,4505,4506 -j ACCEPT
-A fail2ban-ssh -j RETURN

# Allow all from fallback
-A INPUT -s 188.164.255.127 -j ACCEPT

COMMIT
# Completed on Mon Dec 16 13:59:59 2013
